--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Noise Generator</title>
+    <title>Noise Generator</title>
 </head>
 <body>
-    <h1>White Noise Generator</h1>
-    <button id="playButton">Play White Noise</button>
-    <button id="stopButton">Stop White Noise</button>
-    <script src="white_noise.js"></script>
+    <h1>Noise Generator</h1>
+    <button id="playWhiteNoiseButton">Play White Noise</button>
+    <button id="stopWhiteNoiseButton">Stop White Noise</button>
+    <button id="playBrownNoiseButton">Play Brown Noise</button>
+    <button id="stopBrownNoiseButton">Stop Brown Noise</button>
+    <button id="playPinkNoiseButton">Play Pink Noise</button>
+    <button id="stopPinkNoiseButton">Stop Pink Noise</button>
+    <script src="script.js"></script>
 </body>
 </html>
+
