--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Noise Generator</title>
 </head>
 <body>
     <h1>Noise Generator</h1>
-    <button id="playWhiteNoiseButton">Play White Noise</button>
-    <button id="stopWhiteNoiseButton">Stop White Noise</button>
-    <button id="playBrownNoiseButton">Play Brown Noise</button>
-    <button id="stopBrownNoiseButton">Stop Brown Noise</button>
-    <button id="playPinkNoiseButton">Play Pink Noise</button>
-    <button id="stopPinkNoiseButton">Stop Pink Noise</button>
+    <div class="container">
+      <button id="playWhiteNoiseButton">Play White Noise</button>
+      <button id="stopWhiteNoiseButton">Stop White Noise</button>
+      <button id="playBrownNoiseButton">Play Brown Noise</button>
+      <button id="stopBrownNoiseButton">Stop Brown Noise</button>
+      <button id="playPinkNoiseButton">Play Pink Noise</button>
+      <button id="stopPinkNoiseButton">Stop Pink Noise</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
