--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1>Noise Generator</h1>
+<h2>Warning LOUD sound! Be cautious to avoid damaging your ears!</h2>
   <div class="container">
     <div class="sub-container" id="whiteNoise">
       <p>White Noise</p>
